# oncvideo

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  oncvideo.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: sphinx.yml  static.yml
_modules/: index.html
_modules/oncvideo/: didson_file.html  dives_onc.html  download_files.html  extract_frame.html  list_files.html  onc.html  seatube.html  ts_download.html  utils.html  video_info.html
_sources/: index.rst.txt  oncvideo.rst.txt
_static/: function.css
docs/: requeriments.txt
docs/source/: conf.py  index.rst
oncvideo/: DIDSON_info.py  __init__.py  __main__.py  _iterate_ffmpeg.py  _utils.py  arg_parser.py  convert_to_mp4.py  didson_file.py  dives_ONC.py  download_files.py  extract_FOV.py  extract_frame.py  list_files.py  video_info.py
src/oncvideo/: __init__.py  __main__.py  _arg_parser.py  _iterate_ffmpeg.py  _utils.py  arg_parser.py  didson_file.py  dives_onc.py  download_files.py  extract_frame.py  list_files.py  onc.py  seatube.py  timelapse.py  ts_download.py  utils.py  video_info.py
tests/: list_dc.csv  list_di.csv  list_dive.csv  list_lc.csv  seatube_test.csv  test_data.py  test_didson.py  test_list_files.py  test_seatube.py  test_videos.py  tssd.py  videos_test.csv
